# cscd58-load-balancer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
docs/: Experimentations.md  On Implementation.md  On Strategies.md
example/: basic_lb_test.py  server.py
mininet/: basic_loadbalancer.py  loadbalancer_tests.py  pingall.py  random_server.py  server.py  test_diff_delay_diff_weights copy.py  test_diff_delay_diff_weights.py  test_diff_delay_same_weights.py  test_same_delay_same_weights.py
src/: CMakeLists.txt  FileDescriptor.cpp  FileDescriptor.hpp  Http.cpp  Http.hpp  LoadBalancer.cpp  LoadBalancer.hpp  Log.cpp  Log.hpp  Server.cpp  Server.hpp  Sockets.hpp  TcpClient.cpp  TcpClient.hpp  TcpConnection.cpp  TcpConnection.hpp  main.cpp
tests/: CMakeLists.txt
